@@ -9,6 +9,8 @@
 Version 1.9
 
 +Ensure that process exit status is output to a new line in the output buffer
++Trap and log XML parsing assertions instead of crashing when invalid Launch
+XML is encountered.
 
 #-----------------------------------------------------------------------------#
 Version 1.8
